# R-Type

./: .clang-tidy  .clangd  .gitignore  AI_8cpp.html  AI_8cpp__incl.dot  AI_8hpp.html  AI_8hpp__dep__incl.dot  AI_8hpp__incl.dot  AI_8hpp_source.html  APlugin_8cpp.html  APlugin_8cpp__incl.dot  APlugin_8hpp.html  APlugin_8hpp__dep__incl.dot  APlugin_8hpp__incl.dot  APlugin_8hpp_source.html  ATH_8cpp.html  ATH_8cpp__incl.dot  ATH_8hpp.html  ATH_8hpp__dep__incl.dot  ATH_8hpp__incl.dot  ATH_8hpp_source.html  AcknowledgeManager_8cpp.html  AcknowledgeManager_8cpp__incl.dot  AcknowledgeManager_8hpp.html  AcknowledgeManager_8hpp__dep__incl.dot  AcknowledgeManager_8hpp__incl.dot  AcknowledgeManager_8hpp_source.html  ActionEvents_8hpp.html  ActionEvents_8hpp__dep__incl.dot  ActionEvents_8hpp__incl.dot  ActionEvents_8hpp_source.html  ActionTrigger_8hpp.html  ActionTrigger_8hpp__dep__incl.dot  ActionTrigger_8hpp__incl.dot  ActionTrigger_8hpp_source.html  Actions_8cpp.html  Actions_8cpp__incl.dot  Actions_8hpp.html  Actions_8hpp__dep__incl.dot  Actions_8hpp__incl.dot  (+2311 more)
lib/Vector2D/: CMakeLists.txt
lib/Vector2D/include/: Vector2D.hpp
lib/Vector2D/src/: Vector2D.cpp
plugins/: CMakeLists.txt  Catch2Maind.so.3.4.0
plugins/actions/: CMakeLists.txt
plugins/actions/include/: Actions.hpp
plugins/actions/src/: Actions.cpp
plugins/ai/: CMakeLists.txt
plugins/ai/include/: AI.hpp
plugins/ai/include/attack/: AttackPattern.hpp  AttackPatterns.hpp  ContinuousFirePattern.hpp
plugins/ai/include/movement/: CirclePattern.hpp  FollowTargetPattern.hpp  GluePattern.hpp  MovementPattern.hpp  MovementPatterns.hpp  StraightPattern.hpp  TurretPattern.hpp  WavePattern.hpp  ZigzagPattern.hpp
plugins/ai/src/: AI.cpp
plugins/artefacts/: CMakeLists.txt
plugins/artefacts/include/: Artefacts.hpp
plugins/artefacts/include/artefacts/: TemporalEffects.hpp
plugins/artefacts/src/: Artefacts.cpp
plugins/ath/: CMakeLists.txt
plugins/ath/include/: ATH.hpp
plugins/ath/src/: ATH.cpp  Bar.cpp  Button.cpp  Clickable.cpp
plugins/cli/: CMakeLists.txt
plugins/cli/include/: CLI.hpp
plugins/cli/src/: CLI.cpp
plugins/client_network/: CMakeLists.txt
plugins/client_network/include/: Client.hpp  Network.hpp
plugins/client_network/src/: Client.cpp  CommandParsing.cpp  Connected.cpp  Connectionless.cpp  DataTransfer.cpp  Network.cpp
plugins/collision/: CMakeLists.txt
plugins/collision/include/: Collision.hpp  ICollisionAlgorithm.hpp
plugins/collision/include/algorithm/: QuadTreeCollision.hpp  QuadTreeEntity.hpp  QuadTreeNode.hpp  Rect.hpp
plugins/collision/src/: Collision.cpp
plugins/collision/src/algorithm/: QuadTreeCollision.cpp  QuadTreeNode.cpp
plugins/controller/: CMakeLists.txt
plugins/controller/include/: Controller.hpp
plugins/controller/src/: BindingScene.cpp  Controller.cpp
plugins/debug/: CMakeLists.txt
plugins/debug/include/: Debug.hpp  TypeFormatter.hpp
plugins/debug/src/: Debug.cpp  TypeFormatter.cpp
plugins/enemy/: CMakeLists.txt
plugins/enemy/include/: Enemy.hpp
plugins/enemy/src/: Enemy.cpp
plugins/health/: CMakeLists.txt
plugins/health/include/: Health.hpp
plugins/health/src/: Health.cpp
plugins/inventory/: CMakeLists.txt  inventory.json
plugins/inventory/include/: Inventory.hpp  InventoryPlugin.hpp
plugins/inventory/src/: Inventory.cpp  InventoryPlugin.cpp  InventoryScene.cpp
plugins/life/: CMakeLists.txt
plugins/life/include/: Life.hpp
plugins/life/src/: Life.cpp
plugins/logger/: CMakeLists.txt
plugins/logger/include/: Logger.hpp
plugins/logger/src/: Logger.cpp
plugins/mob/: CMakeLists.txt
plugins/mob/include/: Mob.hpp
plugins/mob/src/: Mob.cpp
plugins/moving/: CMakeLists.txt
plugins/moving/include/: Moving.hpp
plugins/moving/src/: Moving.cpp
plugins/projectile/: CMakeLists.txt
plugins/projectile/include/: Projectile.hpp
plugins/projectile/src/: Projectile.cpp
plugins/raycasting/: CMakeLists.txt
plugins/raycasting/include/: Raycasting.hpp
plugins/raycasting/src/: BasicMap.cpp  Camera.cpp  Raycasting.cpp
plugins/rtype_client/: CMakeLists.txt
plugins/rtype_client/include/: RtypeClient.hpp
plugins/rtype_client/src/: HttpRequests.cpp  RtypeClient.cpp
plugins/rtype_server/: CMakeLists.txt
plugins/rtype_server/include/: RtypeServer.hpp
plugins/rtype_server/src/: HttpRequests.cpp  RtypeServer.cpp
plugins/rtype_single/: CMakeLists.txt
plugins/rtype_single/include/: RtypeSingle.hpp
plugins/rtype_single/src/: RtypeSingle.cpp
plugins/score/: CMakeLists.txt
plugins/score/include/: Score.hpp
plugins/score/src/: Score.cpp
plugins/server_network/: CMakeLists.txt
plugins/server_network/include/: Commands.hpp  Network.hpp  RtypeServer.hpp  Server.hpp
plugins/server_network/src/: CommandParsing.cpp  Connected.cpp  Connectionless.cpp  DataTransfer.cpp  Network.cpp  RtypeServer.cpp  Server.cpp
plugins/sfml/: CMakeLists.txt
plugins/sfml/include/: Drawable.hpp  SFMLRenderer.hpp
plugins/sfml/src/: AnimatedSprite.cpp  Background.cpp  BasicMap.cpp  Camera.cpp  CameraEvents.cpp  Drawable.cpp  Gamepad.cpp  SFMLRenderer.cpp  SliderDrawing.cpp  Sounds.cpp
plugins/sound/: CMakeLists.txt
plugins/sound/include/: Sound.hpp
plugins/sound/src/: MusicManager.cpp  Sound.cpp  SoundManager.cpp  Volume.cpp
plugins/ui/: CMakeLists.txt
plugins/ui/include/: UI.hpp
plugins/ui/src/: AnimatedSprite.cpp  CameraEvents.cpp  Input.cpp  InputFocusEvent.cpp  Slider.cpp  UI.cpp  UIinit.cpp
plugins/wave/: CMakeLists.txt
plugins/wave/include/: WaveManager.hpp
plugins/wave/include/patterns/: ArcPattern.hpp  CirclePattern.hpp  FormationVPattern.hpp  GridPattern.hpp  IPatternStrategy.hpp  (+2 more)
plugins/wave/src/: WaveDeath.cpp  WaveFormation.cpp  WaveManager.cpp  WavePattern.cpp  WaveSpawner.cpp
plugins/weapon/: CMakeLists.txt
plugins/weapon/include/: Weapon.hpp  WeaponHelpers.hpp
plugins/weapon/src/: BasicWeapon.cpp  ChargeWeapon.cpp  DelayedWeapon.cpp  Weapon.cpp
test/: CMakeLists.txt
test/source/: advanced_test.cpp  hooks_functions_test.cpp  hooks_test.cpp  r-type_test.cpp  serialization_test.cpp
(+566 files in other folders)
