cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fPIC -O3")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

include_directories(${parser_SOURCE_DIR}/include)

add_subdirectory(moving)
add_subdirectory(sfml)
add_subdirectory(logger)
add_subdirectory(life)
add_subdirectory(client_network)
add_subdirectory(server_network)
add_subdirectory(cli)
add_subdirectory(collision)
add_subdirectory(controller)
add_subdirectory(ui)
add_subdirectory(actions)
add_subdirectory(projectile)
add_subdirectory(target)
